# luaffi_old

./: CMakeLists.txt  Makefile  conf.mak  dist.info  luaffi.c
test/: Makefile  test.c  test.lua
